[package]
name = "nodes_editor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14"
egui = "0.14"
derivative = "2.2.0"
serde = { version = "1", features = ["derive"], optional = true }

[features]
persistence = ["eframe/persistence", "serde"]
